[package]
name = "pel"
version = "0.1.0"
authors = ["Paul Constant <constantpaul@hotmail.fr>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dev-dependencies]
criterion = "0.3"

[dependencies]
paste = "1.0.4"
log = "0.4.14"
log4rs = "1.0.0"

[[bench]]
name = "bench_send_events"
harness = false
